--- a/css/index.css
+++ b/css/index.css
@@ -1,70 +1,15 @@
 *{
 	margin: 1px;
-	text-align: center;
+	text-align: 
 }
+.borda,h1{
+	margin-top: 160px;
 
-/*Letras Brancas*/
-.white{
-	color: white;
+
 }
-
-/*Tamanho do Logo */
-#icon1{
-	width: 50px;
-	height: 50px;
-	margin-top: -15px;
-	margin-left: -15px;
-}
-
-/*Tamanho no da Img*/
-.imgs{
-	width: 100%;
-	height: 300px;
-	
-}
-
-/*Tamanho das Imgs No Carousel*/
-.item{
-	width: 100%;
-	height: 210px;
-}
-
 .center{
-	background: black;
-	width: 100%;
-	height: 10px;
-}
-
-/* Efeito Nos Icones - Rodapé*/
-i{
-	color: white;
-}
-i:hover{
-	color: rgba(255,255,255,0.9);
-}
-#top{
-	padding: 7px;
-
-}
-#top:hover{
-	background: grey;
-	padding: 7px;
-}
-
-
-/* Login*/
-.login{
-	background: linear-gradient(to right,#ce2e3c,#da6709);
-	width: 100%;
-	height: 200px;
-}
-
-/* */
-.footer{
-	background: black;
-	width: 100%;
-	height: 150px;
-
+	margin-right : 600px;
+	margin-top: 200px;
 }
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
@@ -82,18 +27,10 @@ i:hover{
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width:769px) {
-	/*Apaga o Icone*/
-	#icon1{
-		display: none;
+	.pull{
+		margin-left: 100px;
+	 }
 	}
-	.item{
-	width: 100%;
-	height: 500px;
-}	
-	.menu-center{
-		float: right;
-	}
- }
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: @screen-lg-min) { ... }
