--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -2,36 +2,27 @@
 	margin: 1px;
 	
 }
-#icon{
-	background: url(../img/logo.png);
-	width: 54px;
-	height: 54px;
-}
-
-img{
-	width: 33%;
-	height: 250px;
-
-	border: 2px solid black;
-	border-radius: 20px;
+#box{
+	position: absolute;
+	top:50%;
+	left: 50%;
+	margin-top: -200px;
+	margin-left: -350px;
 
 }
-.row #conteudo{
-	width: 33%;
-	height: 250px;
-	border: 2px solid black;
-	border-radius: 20px;
-	text-align: center;
+.banner{
 	
-}
+	border: 0.5px solid black;
+	border-radius: 10px;
+	width: 700px;
+	height: 400px;
+	padding-top: 50px;
+	padding-left: 170px;
+	background: rgba(255,255,255,0.3);
 
-.center-rodape{
-	margin-left: 40%;
 }
-.footer{
-	background: black;
-	width: 100%;
-	height: 200px;
+body{
+	background-image: url("../img/index.jpg");
 }
 
 /* Extra small devices (phones, less than 768px) */
