--- a/css/login.css
+++ b/css/login.css
@@ -1,38 +1,30 @@
 *{
-
+	margin: 1px;
 	
 }
 #box{
 	position: absolute;
-	left: 56%;
-	
+	top:50%;
+	left: 50%;
+	margin-top: -200px;
+	margin-left: -350px;
 
 }
 .banner{
-
-	border: 1px solid white;
-	padding: 150px;
-	background:white;
-	height: 100%;
-
-}
-
-
-body{
-	background: url("../img/index.jpg");
-}
-
-a:hover{
-	text-decoration: none;
-
-
-}a:link{
-	text-decoration: none;
-
-}
-.center{
 	
+	border: 0.5px solid black;
+	border-radius: 10px;
+	width: 700px;
+	height: 400px;
+	padding-top: 50px;
+	padding-left: 220px;
+	background: rgba(255,255,255,0.3);
+
 }
+body{
+	background-image: url("../img/login.png");
+}
+
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
 
