--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,37 @@
 *{
-	margin: 1px;
-	text-align: 
-}
-.borda,h1{
-	margin-top: 160px;
 
+	
+}
+#box{
+	position: absolute;
+	left: 56%;
+	
+
+}
+.banner{
+
+	border: 1px solid white;
+	padding: 150px;
+	background:white;
+	height: 100%;
+
+}
+
+
+body{
+	background: url("../img/index.jpg");
+}
+
+a:hover{
+	text-decoration: none;
+
+
+}a:link{
+	text-decoration: none;
 
 }
 .center{
-	margin-right : 600px;
-	margin-top: 200px;
+	
 }
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
