--- a/css/login.css
+++ b/css/login.css
@@ -22,7 +22,7 @@
 
 }
 body{
-	background-image: url("../img/index.jpg");
+	background-image: url("../img/login.png");
 }
 
 /* Extra small devices (phones, less than 768px) */
