--- a/css/login.css
+++ b/css/login.css
@@ -18,7 +18,7 @@
 	height: 400px;
 	padding-top: 50px;
 	padding-left: 160px;
-	background: rgba(255,255,255,0.5);
+	background: rgba(255,255,255,0.3);
 
 }
 body{
@@ -37,6 +37,20 @@ body{
 	#icon1{
 		border-radius: 5px;
 	}
+	#box{
+		margin-left: -200px;
+	}
+	.banner{
+	
+	border: 0.5px solid black;
+	border-radius: 10px;
+	width: 400px;
+	height: 400px;
+	padding-top: 50px;
+	padding-left: 70px;
+	background: rgba(255,255,255,0.3);
+
+}
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -44,6 +58,7 @@ body{
 	.pull{
 		margin-left: 100px;
 	 }
+	 
 	}
 
 /* Large devices (large desktops, 1200px and up) */
